[gd_scene load_steps=8 format=3 uid="uid://cruqo01kbn3ab"]

[ext_resource type="Script" uid="uid://7megq05mf7kt" path="res://Scripts/shield.gd" id="1_xlxvf"]
[ext_resource type="Shader" uid="uid://bm3gcg5xbsv0" path="res://Assets/Shaders/FresnelAura.tres" id="2_1831n"]
[ext_resource type="PackedScene" uid="uid://dc6ukdkam24n" path="res://Scenes/hit_box_component.tscn" id="3_6jkow"]
[ext_resource type="PackedScene" uid="uid://034dpfhar4p4" path="res://Scenes/health_component.tscn" id="4_t4iu0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_51wj8"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_1831n")
shader_parameter/FresnelPower = 2.0
shader_parameter/EmissionStrength = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_n464a"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_51wj8")

[sub_resource type="SphereShape3D" id="SphereShape3D_0x6dj"]

[node name="Shield" type="Node3D" groups=["shield"]]
script = ExtResource("1_xlxvf")
explosion = 2

[node name="FresnelAura" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_n464a")

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["shield"] instance=ExtResource("3_6jkow")]
collision_layer = 8
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent"]
shape = SubResource("SphereShape3D_0x6dj")

[node name="HealthComponent" parent="." instance=ExtResource("4_t4iu0")]

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_lost" from="HealthComponent" to="." method="_on_health_component_health_lost"]
